# ppo-implementation-details

./: LICENSE  README.md  comb_utils.py  ppo.py  ppo_atari.py  ppo_atari_critic_first.py  ppo_atari_gru.py  ppo_continuous_action.py  ppo_continuous_action_comb.py  ppo_multidiscrete_mask.py  ppo_value_support.py  pyproject.toml  requirements.txt
scripts/baselines/: atari.sh  atari_lstm_no_framestack.sh  classic_control.sh  classic_control_separate_networks.sh  gym-microrts.sh  mujoco.sh  procgen.sh
scripts/ours/: atari.sh  atari_envpool.sh  atari_lstm_no_framestack.sh  classic_control.sh  classic_control_separate_networks.sh  gym-microrts.sh  mujoco.sh  pong_in_5_mins.sh  procgen.sh
